<resources>
    <string name="app_name">News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_logo">Company Logo</string>
    <string name="news_image">News Image</string>
    <string name="detail_related">İlgili İçerikler</string>
    <string name="detail_share">share</string>
    <string name="share">Paylaş</string>
    <string name="feed_features_text">Öne Çıkanlar</string>
    <string name="carousel">Carousel</string>
    <string name="feed_content_text">İçerikler</string>
    <string name="retry">Yenile</string>
    <string name="error">Hata</string>
</resources>